--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~13.1.0",
     "@fortawesome/fontawesome-free": "^6.1.1",
     "@types/chart.js": "^2.9.37",
+    "angular": "^1.8.3",
     "angular-bootstrap-md": "^13.0.0",
     "angular-bootstrap-modal": "^1.0.8",
     "angular-file-upload": "^2.6.1",
