--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0-beta1",
     "chart.js": "^2.5.0",
+    "cors": "^2.8.5",
     "hammerjs": "^2.0.8",
     "jwt-decode": "^3.1.2",
     "mdb-angular-ui-kit": "^2.2.0",
